--- a/package.json
+++ b/package.json
@@ -14,8 +14,14 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-toastify": "^9.0.5",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
+    "sweetalert2": "^11.4.20",
     "unsplash-js": "^6.0.0",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
